Formatted Config properties

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 monkkee.url=INSERT VALUE HERE
 monkkee.user=INSERT VALUE HERE
 monkkee.password=INSERT VALUE HERE
-
+monkkee.entry=INSERT VALUE HERE
 
